...
        android:gravity="center_horizontal"
        android:text="@string/please_input_a_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userInputEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="center_horizontal"
...
        android:gravity="center_horizontal"
        android:text="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInputEditText" />

    <Button
        android:id="@+id/guessButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="32dp"
        android:onClick="guessVerify"
        android:text="Guess"
...
